tests/negative/neg_task_shared_variable.safe
-- Test: neg_task_shared_variable
-- Description: Two tasks access the same package global directly.
-- Expected: REJECT task_variable_ownership

package Neg_Task_Shared_Variable

   type Counter is range 0 to 100;

   Shared : Counter = 0;

   task A

      loop
         Shared = Shared + 1;

   task B

      loop
         Shared = Shared + 1;

